Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -512,20 +512,20 @@ editVirtualFolderPropertiesTitle=Redakti atributojn de mesaĝujo de serĉo: %S
 virtualFolderSourcesChosen=#1 mesaĝujo elektita;#1 mesaĝujoj elektitaj
 
 #alert to inform the user to choose one or more folders to search for a saved search folder
-alertNoSearchFoldersSelected=You must choose at least one folder to search for the saved search folder.
+alertNoSearchFoldersSelected=Elektu almenaŭ unu mesaĝujon por krei mesaĝujon de serĉo.
 
 # These are displayed in the message and folder pane windows
 # LOCALIZATION NOTE %.*f is the abbreviated size in the appropriate units
-byteAbbreviation2=%.*f bytes
-kiloByteAbbreviation2=%.*f KB
-megaByteAbbreviation2=%.*f MB
-gigaByteAbbreviation2=%.*f GB
+byteAbbreviation2=%.*f B
+kiloByteAbbreviation2=%.*f KiB
+megaByteAbbreviation2=%.*f MiB
+gigaByteAbbreviation2=%.*f GiB
 
 ## LOCALIZATION NOTE(folderWithAccount):
 ## This is used to show folder name together with an account name.
 ## %1$S = folder name
 ## %2$S = account name
-folderWithAccount=%1$S - %2$S
+folderWithAccount=%1$S – %2$S
 ## LOCALIZATION NOTE(folderWithUnreadMsgs):
 ## This is a concatenation of two strings to compose a folder label with unread messages.
 ## %1$S = folder name
@@ -540,7 +540,7 @@ folderSummarizedSymbolValue=▾%S
 ## This is a tooltip message shown on the values in the numeric folder pane columns.
 ## %1$S = is the count of messages having the respective property, found in the folder under mouse cursor
 ## %2$S = is the count of messages having the respective property, found in subfolders of the folder under mouse cursor
-subfoldersExplanation=%1$S in this folder, %2$S in subfolders
+subfoldersExplanation=%1$S en tiu ĉi mesaĝujo, %2$S en submesaĝujoj
 
 # Error message if message for a message id wasn't found
 errorOpenMessageForMessageIdTitle=Error opening message-id
