Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -543,13 +543,14 @@ folderSummarizedSymbolValue=▾%S
 subfoldersExplanation=%1$S en tiu ĉi mesaĝujo, %2$S en submesaĝujoj
 
 # Error message if message for a message id wasn't found
-errorOpenMessageForMessageIdTitle=Error opening message-id
-errorOpenMessageForMessageIdMessage=Message for message-id %S not found
+errorOpenMessageForMessageIdTitle=Eraro malfermi mesaĝon kun specifita identigilo
+errorOpenMessageForMessageIdMessage=Ne trovis mesaĝon kun la identigilo %S
 
 # Warnings to alert users about phishing urls
-confirmPhishingTitle=Email Scam Alert
+confirmPhishingTitle=Averto pri trompo
+linkMismatchTitle=Trovis nekongruan ligilon
 #LOCALIZATION NOTE %1$S is the brand name, %2$S is the host name of the url being visited
-confirmPhishingUrl=%1$S thinks this message is a scam. The links in the message may be trying to impersonate web pages you want to visit. Are you sure you want to visit %2$S?
+confirmPhishingUrl=%1$S rekonas tiun ĉi mesaĝon kiel trompon. La ligiloj en la mesaĝo provas ŝajnigi aliajn retejojn, kiun la uzanto volas viziti. Ĉu vi certe volas malfermi la retadreson %2$S?
 #LOCALIZATION NOTE %1$S is the host name of indicated host, %2$S is the host name of the actual host.
 #LOCALIZATION NOTE $1$S is the host name of the indicated host.
 #LOCALIZATION NOTE %1$S is the host name that was displayed to the user.
