Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -550,10 +550,13 @@ errorOpenMessageForMessageIdMessage=Ne trovis mesaĝon kun la identigilo %S
 confirmPhishingTitle=Averto pri trompo
 linkMismatchTitle=Trovis nekongruan ligilon
 #LOCALIZATION NOTE %1$S is the brand name, %2$S is the host name of the url being visited
-confirmPhishingUrl=%1$S rekonas tiun ĉi mesaĝon kiel trompon. La ligiloj en la mesaĝo provas ŝajnigi aliajn retejojn, kiun la uzanto volas viziti. Ĉu vi certe volas malfermi la retadreson %2$S?
+confirmPhishingUrl=%1$S rekonas tiun ĉi mesaĝon kiel trompon. La ligiloj en la mesaĝo provas ŝajnigi aliajn retejojn, kiun la uzanto volas viziti. Ĉu vi certe volas malfermi la retadreson “%2$S”?
 #LOCALIZATION NOTE %1$S is the host name of indicated host, %2$S is the host name of the actual host.
+confirmPhishingUrlAlternate=La alklakita ligilo ŝajnas konduki al alia retejo, ol la indikita de la teksto. Tio ĉi povas esti uzata por spuri ĉu la uzanto alklakis la ligilon, sed ankaŭ povas esti uzata por trompi.\n\nLa teksto de la ligilo indikas ke ĝi kondukas al “%1$S”, sed vere ĝi kondukas al “%2$S”.
 #LOCALIZATION NOTE $1$S is the host name of the indicated host.
+confirmPhishingGoAhead=Iri al “%1$S” malgraŭ tio
 #LOCALIZATION NOTE %1$S is the host name that was displayed to the user.
+confirmPhishingGoDirect=Iri al “%1$S”
 
 # Check for Updates
 # LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
