--- a/ko/browser/chrome/overrides/appstrings.properties
+++ b/ko/browser/chrome/overrides/appstrings.properties
@@ -7,14 +7,14 @@ fileNotFound=Firefox는 %S 파일을 찾을 수 없습니다.
 fileAccessDenied=%S에 있는 파일을 읽을 수 없습니다.
 dnsNotFound2=%S의 서버에 연결할 수 없습니다.
 unknownProtocolFound=다음 프로토콜 (%S) 중 하나가 프로그램과 연결되어 있지 않거나 이 컨텍스트에서 허용되지 않기 때문에 Firefox는 이 주소를 여는 방법을 모릅니다.
-connectionFailure=%S 서버와 연결할 수 없습니다.
+connectionFailure=Firefox가 %S 서버에 연결할 수 없습니다.
 netInterrupt=%S와(과)의 연결이 로딩 중에 끊어졌습니다.
 netTimeout=%S 서버의 응답이 너무 늦습니다.
 redirectLoop=이 주소에 대하여 완전하지 못한 방법의 연결 이동 요청이 감지되었습니다.
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don’t translate "%S"
 confirmRepostPrompt=이 페이지를 표시하려면, %S가 이전에 수행했던 정보가 필요합니다. 이전에 수행했던 작업(검색 또는 입력 양식 제출)을 다시 반복합니다.
 resendButton.label=다시 보내기
-unknownSocketType=이 서버와의 통신 방법을 알 수 없습니다.
+unknownSocketType=Firefox는 서버와 통신하는 방법을 모릅니다.
 netReset=페이지 로딩 중 서버와의 연결이 초기화 되었습니다.
 notCached=이 페이지는 더 이상 제공되지 않습니다.
 netOffline=오프라인 상태에서는 웹에 연결할 수 없습니다.
