Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/dom/chrome/appstrings.properties
+++ b/ko/dom/chrome/appstrings.properties
@@ -7,7 +7,7 @@ fileNotFound=%S 파일을 찾을 수 없습니다. 위치를 확인하고 다시
 fileAccessDenied=%S에 있는 파일을 읽을 수 없습니다.
 dnsNotFound2=%S 서버를 찾을 수 없습니다. 이름을 확인하고 다시 시도하세요.
 unknownProtocolFound=다음 중 하나(%S)가 등록된 프로토콜이 아니거나 이 맥락에서 허용되지 않습니다.
-connectionFailure=%S 서버와 연결할 수 없습니다.
+connectionFailure=%S에 접속하려고 할 때 연결이 거부되었습니다.
 netInterrupt=%S와(과)의 연결이 로딩 중에 끊어졌습니다.
 netTimeout=%S 서버의 응답이 너무 늦습니다.
 redirectLoop=이 주소에 대하여 완전하지 못한 방법의 연결 이동 요청이 감지되었습니다.
