--- a/ko/browser/chrome/overrides/appstrings.properties
+++ b/ko/browser/chrome/overrides/appstrings.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 malformedURI2=URL이 맞는지 확인하고 다시 시도하세요.
-fileNotFound=Firefox는 %S 파일을 찾을 수 없습니다.
+fileNotFound=Firefox가 %S에서 파일을 찾을 수 없습니다.
 fileAccessDenied=%S에 있는 파일을 읽을 수 없습니다.
 dnsNotFound2=%S의 서버에 연결할 수 없습니다.
 unknownProtocolFound=다음 프로토콜 (%S) 중 하나가 프로그램과 연결되어 있지 않거나 이 컨텍스트에서 허용되지 않기 때문에 Firefox는 이 주소를 여는 방법을 모릅니다.
