Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/overrides/appstrings.properties
+++ b/ko/browser/chrome/overrides/appstrings.properties
@@ -19,7 +19,7 @@ netReset=페이지 로딩 중 서버와의 연결이 초기화 되었습니다.
 notCached=이 페이지는 더 이상 제공되지 않습니다.
 netOffline=Firefox는 현재 오프라인 모드이며 웹을 탐색할 수 없습니다.
 isprinting=인쇄 중 또는 미리 보기에서는 문서를 수정할 수 없습니다.
-deniedPortAccess=이 주소가 일반적으로 웹이 아닌 다른 목적으로 사용되는 포트에 연결하려고 합니다. 보안상의 이유로 연결을 취소합니다.
+deniedPortAccess=이 주소는 일반적으로 웹 탐색 이외의 목적으로 사용되는 네트워크 포트를 사용합니다. Firefox가 사용자 보호를 위해 요청을 취소했습니다.
 proxyResolveFailure=Firefox가 찾을 수 없는 프록시 서버를 사용하도록 구성되어 있습니다.
 proxyConnectFailure=Firefox가 연결을 거부하는 프록시 서버를 사용하도록 구성되어 있습니다.
 contentEncodingError=유효하지 않거나 지원하지 않는 압축 형식을 사용하므로 페이지를 표시할 수 없습니다.
