Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/browser/chrome/overrides/appstrings.properties
+++ b/ko/browser/chrome/overrides/appstrings.properties
@@ -8,7 +8,7 @@ fileAccessDenied=%S의 파일을 읽을 수 없습니다.
 dnsNotFound2=%S 서버에 연결할 수 없습니다.
 unknownProtocolFound=다음 프로토콜 (%S) 중 하나가 프로그램과 연결되어 있지 않거나 이 컨텍스트에서 허용되지 않기 때문에 Firefox는 이 주소를 여는 방법을 모릅니다.
 connectionFailure=Firefox가 %S 서버에 연결할 수 없습니다.
-netInterrupt=%S와(과)의 연결이 로딩 중에 끊어졌습니다.
+netInterrupt=페이지를 로드하는 동안 %S에 대한 연결이 중단되었습니다.
 netTimeout=%S 서버의 응답이 너무 늦습니다.
 redirectLoop=이 주소에 대하여 완전하지 못한 방법의 연결 이동 요청이 감지되었습니다.
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don’t translate "%S"
