--- a/ko/browser/chrome/overrides/appstrings.properties
+++ b/ko/browser/chrome/overrides/appstrings.properties
@@ -8,9 +8,9 @@ fileAccessDenied=%S의 파일을 읽을 수 없습니다.
 dnsNotFound2=%S 서버에 연결할 수 없습니다.
 unknownProtocolFound=다음 프로토콜 (%S) 중 하나가 프로그램과 연결되어 있지 않거나 이 컨텍스트에서 허용되지 않기 때문에 Firefox는 이 주소를 여는 방법을 모릅니다.
 connectionFailure=Firefox가 %S 서버에 연결할 수 없습니다.
-netInterrupt=페이지를 로드하는 동안 %S에 대한 연결이 중단되었습니다.
+netInterrupt=페이지 로딩 중 %S에 대한 연결이 중단되었습니다.
 netTimeout=%S 서버의 응답이 너무 늦습니다.
-redirectLoop=이 주소에 대하여 완전하지 못한 방법의 연결 이동 요청이 감지되었습니다.
+redirectLoop=Firefox에서 서버가 이 주소에 대한 요청을 완료되지 않는 방식으로 리디렉션하고 있음을 감지했습니다.
 ## LOCALIZATION NOTE (confirmRepostPrompt): In this item, don’t translate "%S"
 confirmRepostPrompt=이 페이지를 표시하려면, %S가 이전에 수행했던 정보가 필요합니다. 이전에 수행했던 작업(검색 또는 입력 양식 제출)을 다시 반복합니다.
 resendButton.label=다시 보내기
@@ -28,7 +28,7 @@ externalProtocolTitle=외부 프로토콜 요청
 externalProtocolPrompt=외부 프로그램은 %1$S: 링크에 의해 실행됩니다. \n\n\n요청 링크: %2$S\n프로그램: %3$S\n\n\n만약 이 요청이 사용자가 기대한 실행이 아니라면 다른 프로그램의 취약점을 공격하기 위한 시도일 수도 있습니다. 정상적인 요청으로 판단이 되지 않으면 취소를 선택하세요.
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<알 수 없음>
-externalProtocolChkMsg=이 형식의 모든 링크를 기록
+externalProtocolChkMsg=이 형식의 모든 링크에 대한 이 선택을 기억하기
 externalProtocolLaunchBtn=프로그램 실행
 malwareBlocked=%S 사이트는 공격 사이트로 보고되어 보안 설정에 따라 차단되었습니다.
 harmfulBlocked=%S 사이트는 잠재적으로 위험한 사이트로 보고되어 보안 설정에 따라 차단되었습니다.
