--- a/ko/dom/chrome/appstrings.properties
+++ b/ko/dom/chrome/appstrings.properties
@@ -27,7 +27,7 @@ externalProtocolTitle=외부 프로토콜 요청
 externalProtocolPrompt=외부 프로그램은 %1$S: 링크에 의해 실행됩니다. \n\n\n요청 링크: %2$S\n프로그램: %3$S\n\n\n만약 이 요청이 사용자가 기대한 실행이 아니라면 다른 프로그램의 취약점을 공격하기 위한 시도일 수도 있습니다. 정상적인 요청으로 판단이 되지 않으면 취소를 선택하세요.
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<알 수 없음>
-externalProtocolChkMsg=이 형식의 모든 링크를 기록
+externalProtocolChkMsg=이 형식의 모든 링크에 대한 이 선택을 기억하기
 externalProtocolLaunchBtn=프로그램 실행
 malwareBlocked=%S 사이트는 공격 사이트로 보고되어 보안 설정에 따라 차단되었습니다.
 harmfulBlocked=%S 사이트는 잠재적으로 위험한 사이트로 보고되어 보안 설정에 따라 차단되었습니다.
