--- a/ko/browser/chrome/overrides/appstrings.properties
+++ b/ko/browser/chrome/overrides/appstrings.properties
@@ -36,10 +36,10 @@ unwantedBlocked=%S의 사이트는 원치 않는 소프트웨어를 제공하는
 deceptiveBlocked=%S의 웹 페이지는 가짜 사이트로 신고되어 보안 설정에 따라 차단되었습니다.
 cspBlocked=이 페이지에는 이러한 방식으로 로드되지 않도록 하는 콘텐츠 보안 정책이 있습니다.
 xfoBlocked=이 페이지에는 이 컨텍스트에서 로드되지 않도록 하는 X-Frame-Options 정책이 있습니다.
-corruptedContentErrorv2=%S에 있는 사이트에서 복구할 수 없는 네트워크 프로토콜 위반이 발생했습니다.
+corruptedContentErrorv2=%S의 사이트에서 복구할 수 없는 네트워크 프로토콜 위반이 발생했습니다.
 remoteXUL=이 페이지는 Firefox에서 더 이상 기본적으로 사용할 수 없는 지원되지 않는 기술을 사용합니다.
 ## LOCALIZATION NOTE (sslv3Used) - Do not translate "%S".
 sslv3Used=깨진 보안 프로토콜인 SSLv3를 사용하기 때문에 %S에 있는 데이터의 안정성을 Firefox는 보장할 수 없습니다.
 inadequateSecurityError=웹 사이트가 불충분한 수준의 보안으로 연결을 시도했습니다.
-blockedByPolicy=기관에서 이 페이지나 사이트에 접근할 수 없게 차단하였습니다.
+blockedByPolicy=사용자의 조직에서 이 페이지나 사이트에 접근할 수 없게 차단하였습니다.
 networkProtocolError=Firefox에서 복구할 수 없는 네트워크 프로토콜 위반이 발생했습니다.
