--- a/ko/dom/chrome/appstrings.properties
+++ b/ko/dom/chrome/appstrings.properties
@@ -4,7 +4,7 @@
 
 malformedURI2=URL이 맞는지 확인하고 다시 시도하세요.
 fileNotFound=%S 파일을 찾을 수 없습니다. 위치를 확인하고 다시 시도하세요.
-fileAccessDenied=%S에 있는 파일을 읽을 수 없습니다.
+fileAccessDenied=%S의 파일을 읽을 수 없습니다.
 dnsNotFound2=%S 서버를 찾을 수 없습니다. 이름을 확인하고 다시 시도하세요.
 unknownProtocolFound=다음 중 하나(%S)가 등록된 프로토콜이 아니거나 이 맥락에서 허용되지 않습니다.
 connectionFailure=%S에 접속하려고 할 때 연결이 거부되었습니다.
@@ -35,10 +35,10 @@ unwantedBlocked=%S의 사이트는 원치 않는 소프트웨어를 제공하는
 deceptiveBlocked=%S의 웹 페이지는 가짜 사이트로 신고되어 보안 설정에 따라 차단되었습니다.
 cspBlocked=이 페이지에는 이러한 방식으로 로드되지 않도록 하는 콘텐츠 보안 정책이 있습니다.
 xfoBlocked=이 페이지에는 이 컨텍스트에서 로드되지 않도록 하는 X-Frame-Options 정책이 있습니다.
-corruptedContentErrorv2=%S에 있는 사이트에서 복구할 수 없는 네트워크 프로토콜 위반이 발생했습니다.
+corruptedContentErrorv2=%S의 사이트에서 복구할 수 없는 네트워크 프로토콜 위반이 발생했습니다.
 remoteXUL=이 페이지는 더 이상 기본적으로 제공되지 않는 미지원 기술을 사용합니다.
 sslv3Used=깨진 보안 프로토콜인 SSLv3를 사용하기 때문에 %S에 있는 데이터의 안정성을 보장할 수 없습니다.
 weakCryptoUsed=%S의 소유자가 웹 사이트를 적절하게 설정하지 않았습니다. 정보 도용을 막기 위해서 이 웹 사이트와 연결을 하지 않았습니다.
 inadequateSecurityError=웹 사이트가 부적절한 보안 수준의 연결을 시도했습니다.
-blockedByPolicy=기관에서 이 페이지나 사이트에 접근할 수 없게 차단하였습니다.
+blockedByPolicy=사용자의 조직에서 이 페이지나 사이트에 접근할 수 없게 차단하였습니다.
 networkProtocolError=Firefox에서 복구할 수 없는 네트워크 프로토콜 위반이 발생했습니다.
