--- a/ko/dom/chrome/appstrings.properties
+++ b/ko/dom/chrome/appstrings.properties
@@ -8,14 +8,14 @@ fileAccessDenied=%S의 파일을 읽을 수 없습니다.
 dnsNotFound2=%S 서버를 찾을 수 없습니다. 이름을 확인하고 다시 시도하세요.
 unknownProtocolFound=다음 중 하나(%S)가 등록된 프로토콜이 아니거나 이 맥락에서 허용되지 않습니다.
 connectionFailure=%S에 접속하려고 할 때 연결이 거부되었습니다.
-netInterrupt=%S와(과)의 연결이 로딩 중에 끊어졌습니다.
-netTimeout=%S 서버의 응답이 너무 늦습니다.
-redirectLoop=이 주소에 대하여 완전하지 못한 방법의 연결 이동 요청이 감지되었습니다.
+netInterrupt=%S에 대한 연결이 예기치 않게 종료되었습니다. 일부 데이터가 전송되었을 수 있습니다.
+netTimeout=%S에 접속하려고 할 때 작업 시간이 초과되었습니다.
+redirectLoop=이 URL에 대한 리디렉션 한도를 초과했습니다.  요청한 페이지를 로드할 수 없습니다.  차단된 쿠키 때문일 수 있습니다.
 confirmRepostPrompt=이 페이지를 표시하려면 응용프로그램이 이전에 수행했던 정보가 필요합니다. 이전에 실행하였던 작업(검색 또는 입력 양식 제출)을 다시 반복합니다.
 resendButton.label=다시 보내기
 unknownSocketType=PSM (Personal Security Manager)을 설치하지 않으면 이 문서를 표시할 수 없습니다. PSM을 다운로드하고 설치한 후 다시 시도하시거나 시스템 관리자에게 문의하세요.
-netReset=페이지 로딩 중 서버와의 연결이 초기화 되었습니다.
-notCached=페이지가 더 이상 저장되어 있지 않습니다.
+netReset=문서에 데이터가 없습니다.
+notCached=이 문서는 더 이상 사용할 수 없습니다.
 netOffline=오프라인 상태에서는 웹에 연결할 수 없습니다.
 isprinting=인쇄 중 또는 미리 보기에서는 문서를 수정할 수 없습니다.
 deniedPortAccess=이 주소가 일반적으로 웹이 아닌 다른 목적으로 사용되는 포트에 연결하려고 합니다. 보안상의 이유로 연결을 취소합니다.
