Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/dom/chrome/accessibility/AccessFu.properties
+++ b/ko/dom/chrome/accessibility/AccessFu.properties
@@ -151,7 +151,7 @@ spansRows = %S행 결합
 jumpAction     =      건너뛰기
 pressAction    =      누르기
 checkAction    =      체크함
-uncheckAction  =      체크 안 함
+uncheckAction  =      확인 안 함
 onAction       =      켜기
 offAction      =      끄기
 selectAction   =      선택
