--- a/ko/dom/chrome/appstrings.properties
+++ b/ko/dom/chrome/appstrings.properties
@@ -16,9 +16,9 @@ resendButton.label=다시 보내기
 unknownSocketType=PSM (Personal Security Manager)을 설치하지 않으면 이 문서를 표시할 수 없습니다. PSM을 다운로드하고 설치한 후 다시 시도하시거나 시스템 관리자에게 문의하세요.
 netReset=문서에 데이터가 없습니다.
 notCached=이 문서는 더 이상 사용할 수 없습니다.
-netOffline=오프라인 상태에서는 웹에 연결할 수 없습니다.
+netOffline=오프라인에서는 이 문서를 표시 할 수 없습니다. 온라인으로 전환하려면, 파일 메뉴에서 오프라인으로 작업을 선택 취소하세요.
 isprinting=인쇄 중 또는 미리 보기에서는 문서를 수정할 수 없습니다.
-deniedPortAccess=이 주소가 일반적으로 웹이 아닌 다른 목적으로 사용되는 포트에 연결하려고 합니다. 보안상의 이유로 연결을 취소합니다.
+deniedPortAccess=보안상의 이유로 지정된 포트 번호에 대한 액세스가 비활성화되었습니다.
 proxyResolveFailure=구성한 프록시 서버를 찾을 수 없습니다. 프록시 설정을 확인하고 다시 시도하세요.
 proxyConnectFailure=구성한 프록시 서버에 접속하려고 할 때 연결이 거부되었습니다. 프록시 설정을 확인하고 다시 시도하세요.
 contentEncodingError=유효하지 않거나 지원하지 않는 압축 형식을 사용하므로 페이지를 표시할 수 없습니다.
