--- a/ko/browser/chrome/overrides/appstrings.properties
+++ b/ko/browser/chrome/overrides/appstrings.properties
@@ -40,6 +40,6 @@ corruptedContentErrorv2=%S의 사이트에서 복구할 수 없는 네트워크 
 remoteXUL=이 페이지는 Firefox에서 더 이상 기본적으로 사용할 수 없는 지원되지 않는 기술을 사용합니다.
 ## LOCALIZATION NOTE (sslv3Used) - Do not translate "%S".
 sslv3Used=깨진 보안 프로토콜인 SSLv3를 사용하기 때문에 %S에 있는 데이터의 안정성을 Firefox는 보장할 수 없습니다.
-inadequateSecurityError=웹 사이트가 불충분한 수준의 보안으로 연결을 시도했습니다.
+inadequateSecurityError=웹 사이트가 부적절한 보안 수준의 연결을 시도했습니다.
 blockedByPolicy=사용자의 조직에서 이 페이지나 사이트에 접근할 수 없게 차단하였습니다.
 networkProtocolError=Firefox에서 복구할 수 없는 네트워크 프로토콜 위반이 발생했습니다.
