Pontoon: Update Indonesian (id) localization of Firefox Co-authored-by: romi <romihardiyanto@gmail.com>

--- a/id/browser/chrome/browser/browser.properties
+++ b/id/browser/chrome/browser/browser.properties
@@ -1222,7 +1222,7 @@ confirmationHint.pinTab.label = Disematkan!
 confirmationHint.pinTab.description = Klik kanan tab untuk melepaskan sematan.
 
 confirmationHint.passwordSaved.label = Sandi disimpan!
-confirmationHint.loginRemoved.label = Log masuk dihapus!
+confirmationHint.loginRemoved.label = Info masuk dihapus!
 confirmationHint.breakageReport.label = Laporan terkirim. Terima kasih!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
