Pontoon: Update Indonesian (id) localization of Firefox Co-authored-by: romi <romihardiyanto@gmail.com>

--- a/id/browser/chrome/browser/browser.properties
+++ b/id/browser/chrome/browser/browser.properties
@@ -671,7 +671,7 @@ trackingProtection.icon.activeTooltip=Percobaan pelacakan telah diblokir
 trackingProtection.icon.disabledTooltip=Konten pelacak terdeteksi
 
 trackingProtection.icon.activeTooltip2=Memblokir pelacak media sosial, kuki pelacakan lintas, dan pelacak sidik.
-trackingProtection.icon.disabledTooltip2=Perlindungan Pelacakan Dipertingkat NONAKTIF untuk situs ini.
+trackingProtection.icon.disabledTooltip2=Perlindungan Pelacakan yang Ditingkatkan NONAKTIF untuk situs ini.
 # LOCALIZATION NOTE (trackingProtection.icon.noTrackersDetectedTooltip): %S is brandShortName.
 trackingProtection.icon.noTrackersDetectedTooltip=Tidak ada pelacak yang dikenali %S terdeteksi di laman ini.
 
