--- a/pl/browser/chrome/browser/activity-stream/newtab.properties
+++ b/pl/browser/chrome/browser/activity-stream/newtab.properties
@@ -41,7 +41,7 @@ confirm_history_delete_p1=Czy na pewno usunąć wszystkie wizyty na tej stronie 
 # the same dialog as confirm_history_delete_p1. "This action" refers to deleting a
 # page from history.
 confirm_history_delete_notice_p2=Tej czynności nie można cofnąć.
-menu_action_save_to_pocket=Zachowaj w Pocket
+menu_action_save_to_pocket=Wyślij do Pocket
 menu_action_delete_pocket=Usuń z Pocket
 menu_action_archive_pocket=Archiwizuj w Pocket
 
