Pontoon: Update Dutch (nl) localization of Firefox Co-authored-by: Mark Heijl <markh@babelzilla.org>

--- a/nl/browser/chrome/browser/browser.properties
+++ b/nl/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Vastgemaakt!
 confirmationHint.pinTab.description = Klik met de rechtermuisknop op het tabblad om het los te maken.
 
 confirmationHint.passwordSaved.label = Wachtwoord opgeslagen!
+confirmationHint.loginRemoved.label = Aanmelding verwijderd!
 confirmationHint.breakageReport.label = Rapport verzonden. Dank u!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
