--- a/nl/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/nl/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Bijwerken
 updateLoginButtonAccessKey = B
 updateLoginButtonDeny.label = Niet bijwerken
 updateLoginButtonDeny.accesskey = N
+updateLoginButtonDelete.label = Opgeslagen aanmelding verwijderen
+updateLoginButtonDelete.accesskey = w
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Geen gebruikersnaam
-
 duplicateLoginTitle=Aanmelding bestaat al
 duplicateLogin=Er bestaat al eenzelfde aanmelding.
 
