--- a/nl/dom/chrome/accessibility/mac/accessible.properties
+++ b/nl/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       hoofd
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      waarschuwing
 alertDialog =      waarschuwingsdialoogvenster
+dialog      =      dialoogvenster
 article     =      artikel
 document    =      document
 # The (spoken) role description for the WAI-ARIA figure role
