New strings for Firefox, dom, toolkit, and devtools

--- a/da/browser/chrome/browser/browser.properties
+++ b/da/browser/chrome/browser/browser.properties
@@ -1222,7 +1222,7 @@ confirmationHint.pinTab.label = Fastgjort!
 confirmationHint.pinTab.description = Højreklik på fanebladet for at frigøre det.
 
 confirmationHint.passwordSaved.label = Adgangskode gemt!
-
+confirmationHint.loginRemoved.label = Login fjernet!
 confirmationHint.breakageReport.label = Rapporten er sendt. Tak!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
