--- a/da/devtools/client/webconsole.properties
+++ b/da/devtools/client/webconsole.properties
@@ -214,6 +214,11 @@ webconsole.menu.selectAll.accesskey=M
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Åbn i sidepanel
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Inspicer objekt i sidepanel
 webconsole.menu.openInSidebar.accesskey=s
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
