--- a/da/dom/chrome/security/security.properties
+++ b/da/dom/chrome/security/security.properties
@@ -59,6 +59,7 @@ InsecurePasswordsPresentOnIframe=Login-felterne er placeret i en usikker iframe 
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Indlæser blandet (usikkert) aktivt indhold fra "%1$S" på en sikker side
 LoadingMixedDisplayContent2=Indlæser blandet (usikkert) ikke-aktivt indhold fra "%1$S" på en sikker side
+LoadingMixedDisplayObjectSubrequestDeprecation=Indlæser blandet (usikkert) indhold fra "%1$S"  i en plugin på en sikker side. Dette frarådes og vil snart blive blokeret.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=En iframe som både indeholder allow-scripts og allow-same-origin i sin sandbox-attribut kan deaktivere dens sandboxning.
 
