--- a/da/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/da/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -22,6 +22,8 @@ updateLoginButtonText = Opdater
 updateLoginButtonAccessKey = O
 updateLoginButtonDeny.label = Opdater ikke
 updateLoginButtonDeny.accesskey = p
+updateLoginButtonDelete.label = Fjern gemt login
+updateLoginButtonDelete.accesskey = F
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
