--- a/da/devtools/client/debugger.properties
+++ b/da/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Vis inline-forhåndsvisning
 # for hiding the inline preview block
 inlinePreview.hide.label=Skjul inline-forhåndsvisning
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Indstillinger for debugger
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Deaktiver JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Deaktiverer JavaScript (kræver genindlæsning)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Ingen egenskaber
@@ -740,6 +751,10 @@ watchpoints.getWatchpoint=Property get
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=Property set
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Property get eller set
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
