--- a/da/dom/chrome/accessibility/mac/accessible.properties
+++ b/da/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       hoved
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      advarsel
 alertDialog =      advarselsdialogboks
+dialog      =      dialogboks
 article     =      artikel
 document    =      dokument
 # The (spoken) role description for the WAI-ARIA figure role
