--- a/da/toolkit/chrome/global/aboutReader.properties
+++ b/da/toolkit/chrome/global/aboutReader.properties
@@ -35,12 +35,20 @@ aboutReader.fontType.serif=Serif
 aboutReader.fontType.sans-serif=Sans-serif
 
 # LOCALIZATION NOTE (aboutReader.fontTypeSample): String used to sample font types.
+# For followup see: https://bugzilla.mozilla.org/show_bug.cgi?id=1637089 
 aboutReader.fontTypeSample=Aa
 
 aboutReader.toolbar.close=Luk læsevisning
 aboutReader.toolbar.typeControls=Indstillinger
 
-# Reader View toolbar button
+# This is used as a label for the Reader View toolbar button.
+# This is a label used for the Save to Pocket option in the toolbar.
+# %S is replaced by Pocket.
+readerView.savetopocket.label=Gem til %S
+# This is a label used for done option in the toolbar
+readerView.done.label=Færdig
+# These are used for the Reader View toolbar button and the menuitem within the
+# View menu.
 readerView.enter=Åbn læsevisning
 readerView.enter.accesskey=L
 readerView.close=Luk læsevisning
