Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -561,12 +561,12 @@ confirmPhishingGoDirect=Iri al “%1$S”
 # Check for Updates
 # LOCALIZATION NOTE (updatesItem_*): these are alternative labels for Check for Update item in Help menu.
 # Which one is used depends on Update process state.
-updatesItem_default=Check for Updates…
-updatesItem_defaultFallback=Check for Updates…
-updatesItem_default.accesskey=C
-updatesItem_downloading=Downloading %S…
-updatesItem_downloadingFallback=Downloading Update…
-updatesItem_downloading.accesskey=D
+updatesItem_default=Kontroli pri ĝisdatigoj…
+updatesItem_defaultFallback=Kontroli pri ĝisdatigoj…
+updatesItem_default.accesskey=K
+updatesItem_downloading=Elŝuti %S…
+updatesItem_downloadingFallback=Elŝutado de ĝisdatigo…
+updatesItem_downloading.accesskey=E
 updatesItem_resume=Resume Downloading %S…
 updatesItem_resumeFallback=Resume Downloading Update…
 updatesItem_resume.accesskey=D
