Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -567,7 +567,7 @@ updatesItem_default.accesskey=K
 updatesItem_downloading=Elŝuti %S…
 updatesItem_downloadingFallback=Elŝutado de ĝisdatigo…
 updatesItem_downloading.accesskey=E
-updatesItem_resume=Resume Downloading %S…
+updatesItem_resume=Pluigi elŝuti %S…
 updatesItem_resumeFallback=Resume Downloading Update…
 updatesItem_resume.accesskey=D
 updatesItem_pending=Apply Downloaded Update Now…
