Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -564,24 +564,24 @@ confirmPhishingGoDirect=Iri al “%1$S”
 updatesItem_default=Kontroli pri ĝisdatigoj…
 updatesItem_defaultFallback=Kontroli pri ĝisdatigoj…
 updatesItem_default.accesskey=K
-updatesItem_downloading=Elŝuti %S…
-updatesItem_downloadingFallback=Elŝutado de ĝisdatigo…
+updatesItem_downloading=Elŝutanta %S…
+updatesItem_downloadingFallback=Elŝutanta ĝisdatigon…
 updatesItem_downloading.accesskey=E
 updatesItem_resume=Pluigi elŝuti %S…
-updatesItem_resumeFallback=Resume Downloading Update…
-updatesItem_resume.accesskey=D
-updatesItem_pending=Apply Downloaded Update Now…
-updatesItem_pendingFallback=Apply Downloaded Update Now…
-updatesItem_pending.accesskey=D
+updatesItem_resumeFallback=Pluigi elŝuti ĝisdatigon…
+updatesItem_resume.accesskey=e
+updatesItem_pending=Apliki elŝutitan ĝisdatigon nun…
+updatesItem_pendingFallback=Apliki elŝutitan ĝisdatigon nun…
+updatesItem_pending.accesskey=e
 
 # Folder Pane Header Title Strings
-folderPaneModeHeader_all=All Folders
-folderPaneModeHeader_unread=Unread Folders
-folderPaneModeHeader_unread_compact=Unread Folders - Compact View
-folderPaneModeHeader_favorite=Favorite Folders
-folderPaneModeHeader_favorite_compact=Favorite Folders - Compact View
-folderPaneModeHeader_recent=Recent Folders
-folderPaneModeHeader_recent_compact=Recent Folders - Compact View
+folderPaneModeHeader_all=Ĉiuj
+folderPaneModeHeader_unread=Nelegitaj
+folderPaneModeHeader_unread_compact=Nelegitaj – kompakta vido
+folderPaneModeHeader_favorite=Ŝatataj
+folderPaneModeHeader_favorite_compact=Ŝatataj – kompakta vido
+folderPaneModeHeader_recent=Ĵusaj
+folderPaneModeHeader_recent_compact=Ĵusaj – kompakta vido
 folderPaneModeHeader_smart=Unified Folders
 unifiedAccountName=Unified Folders
 
