Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -582,21 +582,21 @@ folderPaneModeHeader_favorite=Ŝatataj
 folderPaneModeHeader_favorite_compact=Ŝatataj – kompakta vido
 folderPaneModeHeader_recent=Ĵusaj
 folderPaneModeHeader_recent_compact=Ĵusaj – kompakta vido
-folderPaneModeHeader_smart=Unified Folders
-unifiedAccountName=Unified Folders
+folderPaneModeHeader_smart=Unuigitaj
+unifiedAccountName=Unuigitaj mesaĝujoj
 
 # Copy / Move to Folder Again
 #LOCALIZATION NOTE %1$S is the name of the folder we will move to. moveToFolderAgainAccessKey
 # should have the same value as copyToFolderAgainAccessKey as they are the same menu item in the UI
 # moveToFolderAgainAccessKey should also be a letter that occurs before %1$S
-moveToFolderAgain=Move to "%1$S" Again
-moveToFolderAgainAccessKey=t
+moveToFolderAgain=Removi al “%1$S”
+moveToFolderAgainAccessKey=R
 #LOCALIZATION NOTE %1$S is the name of the folder we will copy to
 # copyToFolderAgainAccessKey
 # should have the same value as moveToFolderAgainAccessKey as they are the same menu item in the UI
 # copyToFolderAgainAccessKey should also be a letter that occurs before %1$S
-copyToFolderAgain=Copy to "%1$S" Again
-copyToFolderAgainAccessKey=t
+copyToFolderAgain=Rekopii al “%1$S”
+copyToFolderAgainAccessKey=R
 
 #LOCALIZATION NOTE(mdnBarMessageNormal) %1$S is the name of the sender
 mdnBarMessageNormal=%1$S has asked to be notified when you read this message.
