Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -599,9 +599,9 @@ copyToFolderAgain=Rekopii al “%1$S”
 copyToFolderAgainAccessKey=R
 
 #LOCALIZATION NOTE(mdnBarMessageNormal) %1$S is the name of the sender
-mdnBarMessageNormal=%1$S has asked to be notified when you read this message.
+mdnBarMessageNormal=La sendinto (%1$S) de tiu ĉi mesaĝo petis vin pri sendi leg‑konfirmon.
 #LOCALIZATION NOTE(mdnBarMessageAddressDiffers) %1$S is the name of the sender, %2$S is the address(es) to send return receipt to
-mdnBarMessageAddressDiffers=%1$S has asked to be notified (on %2$S) when you read this message.
+mdnBarMessageAddressDiffers=La sendinto (%1$S) de tiu ĉi mesaĝo petis vin pri sendi leg‑konfirmon al la adreso %2$S.
 
 # mailCommands.js
 emptyJunkFolderTitle=Empty "%S"
