Pontoon: Update Esperanto (eo) localization of Thunderbird Co-authored-by: Verdulo <tomek@disroot.org>

--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -604,7 +604,7 @@ mdnBarMessageNormal=La sendinto (%1$S) de tiu ĉi mesaĝo petis vin pri sendi le
 mdnBarMessageAddressDiffers=La sendinto (%1$S) de tiu ĉi mesaĝo petis vin pri sendi leg‑konfirmon al la adreso %2$S.
 
 # mailCommands.js
-emptyJunkFolderTitle=Empty "%S"
+emptyJunkFolderTitle=Malplenigi “%S”
 emptyJunkFolderMessage=Delete all messages and subfolders in the Junk folder?
 emptyJunkDontAsk=Don't ask me again.
 emptyTrashFolderTitle=Empty "%S"
