Pontoon: Update Hebrew (he) localization of Firefox Co-authored-by: Itiel <itiel_yn8@walla.com>

--- a/he/devtools/client/netmonitor.properties
+++ b/he/devtools/client/netmonitor.properties
@@ -1379,7 +1379,7 @@ netmonitor.har.importDialogAllFilter=כל הקבצים
 
 # LOCALIZATION NOTE (netmonitor.context.resend.label): This is the label displayed
 # on the context menu that resends the currently displayed request immediately
-netmonitor.context.resend.label=שליחה חוזרת
+netmonitor.context.resend.label=שליחה מחדש
 
 # LOCALIZATION NOTE (netmonitor.context.resend.accesskey): This is the access key
 # for the "Resend" menu item displayed in the context menu for a request
