Pontoon: Update Slovenian (sl) localization of Firefox Co-authored-by: Rok Žerdin <zerdo90@gmail.com> Co-authored-by: Matjaž Horvat <matjaz.horvat@gmail.com>

--- a/sl/dom/chrome/accessibility/AccessFu.properties
+++ b/sl/dom/chrome/accessibility/AccessFu.properties
@@ -130,6 +130,8 @@ main           =       glavno
 navigation     =       brskanje
 search         =       iskanje
 
+region         =       območje
+
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
