--- a/sl/dom/chrome/accessibility/mac/accessible.properties
+++ b/sl/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       glavno
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      opozorilo
 alertDialog =      pogovorno okno z opozorilom
+dialog      =      pogovorno okno
 article     =      članek
 document    =      dokument
 # The (spoken) role description for the WAI-ARIA figure role
