Pontoon: Update Slovenian (sl) localization of Firefox Co-authored-by: Matjaž Horvat <matjaz.horvat@gmail.com>

--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Pripeto!
 confirmationHint.pinTab.description = Desno-kliknite zavihek, da ga odpnete.
 
 confirmationHint.passwordSaved.label = Geslo shranjeno!
+confirmationHint.loginRemoved.label = Prijava odstranjena!
 confirmationHint.breakageReport.label = Poročilo je bilo poslano. Hvala!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
