--- a/sl/netwerk/necko.properties
+++ b/sl/netwerk/necko.properties
@@ -67,6 +67,7 @@ CookieRejectedNonRequiresSecureForBeta=Piškotek “%1$S” bo kmalu zavrnjen, k
 # LOCALIZATION NOTE(CookieLaxForced): %1$S is the cookie name. Do not localize "sameSite", "lax" and "sameSite=lax".
 CookieLaxForced=Piškotek “%1$S” ima pravilnik “sameSite” nastavljen na “lax”, ker manjka atribut “sameSite”, “sameSite=lax” pa je njegova privzeta vrednost.
 # LOCALIZATION NOTE(CookieLaxForcedForBeta): %1$S is the cookie name. %2$S is a URL. Do not localize "sameSite", "lax" and "sameSite=lax", "sameSite=none".
+CookieLaxForcedForBeta=Piškotek “%1$S” nima ustrezne vrednosti atributa “sameSite”. Kmalu bodo piškotki brez ali z neveljavno vrednostjo atributa “sameSite” obravnavani kot “lax”. To pomeni, da piškotek ne bo več poslan v tretjih okoliščinah. Če je vaša aplikacija odvisna od tega, da je piškotek na voljo v takšnih okoliščinah, mu dodajte atribut “sameSite=none“. Če želite izvedeti več o atributu “sameSite“, preberite %2$S
 # LOCALIZATION NOTE: %1$S is cookie name. Do not localize "sameSite", "lax", "strict" and "none"
 CookieSameSiteValueInvalid=Neveljavna vrednost “sameSite“ za piškotek “%1$S”. Podprte vrednosti so : “lax“, “strict“, “none“.
 # LOCALIZATION NOTE (CookieOversize): %1$S is the cookie name. %2$S is the number of bytes. "B" means bytes.
