--- a/eo/mail/chrome/messenger/messenger.properties
+++ b/eo/mail/chrome/messenger/messenger.properties
@@ -605,24 +605,24 @@ mdnBarMessageAddressDiffers=La sendinto (%1$S) de tiu ĉi mesaĝo petis vin pri 
 
 # mailCommands.js
 emptyJunkFolderTitle=Malplenigi “%S”
-emptyJunkFolderMessage=Delete all messages and subfolders in the Junk folder?
-emptyJunkDontAsk=Don't ask me again.
-emptyTrashFolderTitle=Empty "%S"
-emptyTrashFolderMessage=Delete all messages and subfolders in the Trash folder?
-emptyTrashDontAsk=Don't ask me again.
+emptyJunkFolderMessage=Ĉu forigi ĉiujn mesaĝojn kaj submesaĝujojn el la trudmesaĝujo?
+emptyJunkDontAsk=Ne demandi denove.
+emptyTrashFolderTitle=Malplenigi “%S”
+emptyTrashFolderMessage=Ĉu forigi ĉiujn mesaĝojn kaj submesaĝujojn el la rubujo?
+emptyTrashDontAsk=Ne demandi denove.
 
 # junkCommands.js
-junkAnalysisPercentComplete=Junk analysis %S complete
-processingJunkMessages=Processing Junk Messages
+junkAnalysisPercentComplete=Analizo de nedezirataj mesaĝoj: %S
+processingJunkMessages=Pritraktado de nedezirataj mesaĝoj
 
 # Messenger bootstrapping messages
-fileNotFoundTitle = File Not Found
+fileNotFoundTitle = Ne trovis dosieron
 #LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
-fileNotFoundMsg = The file %S does not exist.
+fileNotFoundMsg = La dosiero %S ne ekzistas.
 
-fileEmptyTitle = File Empty
+fileEmptyTitle = Malplena dosiero
 #LOCALIZATION NOTE(fileEmptyMsg): %S is the filename
-fileEmptyMsg = The file %S is empty.
+fileEmptyMsg = La dosiero %S estas malplena.
 
 # LOCALIZATION NOTE (headerMoreAddrs): semicolon separated list of plural
 # forms of the word "more" as used after the number of addresses
