Pontoon: Update Serbian (sr) localization of Firefox Co-authored-by: Isidora Barad Dur <barad.dur@yahoo.com>

--- a/sr/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/sr/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Ажурирај
 updateLoginButtonAccessKey = А
 updateLoginButtonDeny.label = Немој ажурирати
 updateLoginButtonDeny.accesskey = а
+updateLoginButtonDelete.label = Уклоните сачувану пријаву
+updateLoginButtonDelete.accesskey = У
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
