Pontoon: Update Serbian (sr) localization of Firefox Co-authored-by: Isidora Barad Dur <barad.dur@yahoo.com>

--- a/sr/browser/installer/nsisstrings.properties
+++ b/sr/browser/installer/nsisstrings.properties
@@ -27,12 +27,18 @@ STUB_CLEANUP_PAVEOVER_BUTTON=&Ажурирај
 STUB_CLEANUP_REINSTALL_BUTTON=Реинсталирај
 STUB_CLEANUP_CHECKBOX_LABEL=&Обнови подразумеване поставке и уклони старе додатке ради оптималних перформанси
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=Ажурирај
+STUB_CLEANUP_REINSTALL_BUTTON2=Реинсталирај
+STUB_CLEANUP_CHECKBOX_LABEL2=Обнови подразумевана подешавања и уклони старе додатке ради успостављања оптималних перформанси
+
 STUB_INSTALLING_LABEL2=Инсталирам…
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Ставите своју приватност на прво место.\nПридружите се $BrandProductName.
 STUB_INSTALLING_BODY=Преузмите остатак наших производа за заштиту приватности и сазнајте како да останете паметнији и сигурнији на мрежи.
+STUB_INSTALLING_HEADLINE2=Оптимизација ваших подешавања брзине, приватности и сигурности.
+STUB_INSTALLING_BODY2=$BrandShortName ће бити спреман за неколико тренутака.
 STUB_BLURB_FIRST1=Најбржи и најприлагодљивији $BrandShortName до сада
 STUB_BLURB_SECOND1=Брже учитавање странице и промена језичка
 STUB_BLURB_THIRD1=Моћно приватно прегледање
