--- a/sr/dom/chrome/layout/css.properties
+++ b/sr/dom/chrome/layout/css.properties
@@ -7,6 +7,7 @@ MimeNotCssWarn=Опис стила %1$S је учитан, иако његов M
 
 PEUnexpEOF2=Неочекиван крај датотеке при потрази за %1$S.
 PEParseRuleWSOnly=Размак је задат као правило растављања.
+
 PEDeclDropped=Дефиниција је одбачена.
 PEDeclSkipped=Пређи на следећу дефиницију.
 PEUnknownProperty=Непозната особина '%1$S'.
@@ -178,6 +179,8 @@ PESubgridNotSupported=Подршка за кључну реч 'subgrid' од CSS
 PEMoreThanOneGridRepeatAutoFillInNameList=Само један repeat(auto-fill, …) је дозвољен у name листи за subgrid.
 PEMoreThanOneGridRepeatAutoFillFitInTrackList=Само један repeat(auto-fill, …) или repeat(auto-fit, …) је дозвољен у track листи.
 PEMoreThanOneGridRepeatTrackSize=Само једна track величина је дозвољена унутар repeat(auto-fit/auto-fill, …).
+
+PEDisallowedImportRule=@import правила још увек нису важећа у изграђеним стилским таблицама.
 
 TooLargeDashedRadius=Border radius је превелик за стил ‘dashed’ (органичење је 100000px). Рендерује се као solid.
 TooLargeDottedRadius=Border radius је превелик за стил ‘dotted’ (органичење је 100000px). Рендерује се као solid.
