--- a/sr/browser/chrome/browser/accounts.properties
+++ b/sr/browser/chrome/browser/accounts.properties
@@ -141,6 +141,7 @@ account.title = Налог
 
 # LOCALIZATION NOTE (account.accountSettings):
 # Used as the description below user's email in the FxA toolbar menu.
+account.accountSettings = Подешавања налога
 
 # LOCALIZATION NOTE (account.finishAccountSetup):
 # Used as the FxA toolbar menu item value when user has not
