--- a/sr/dom/chrome/accessibility/mac/accessible.properties
+++ b/sr/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       главно
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      упозорење
 alertDialog =      дијалог упозорења
+dialog      =      дијалог
 article     =      чланак
 document    =      документ
 # The (spoken) role description for the WAI-ARIA figure role
