--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -91,8 +91,8 @@ webextPerms.sideloadMenuItem=%1$S додано до %2$S
 # %S is replaced with the localized name of the extension being installed.
 # Note, this string will be used as raw markup. Avoid characters like <, >, &
 webextPerms.sideloadHeader=%S додано
-webextPerms.sideloadText2=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш $BrandShortName. Ознайомтесь із запитами дозволів для цього додатка й оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
-webextPerms.sideloadTextNoPerms=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш $BrandShortName. Оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
+webextPerms.sideloadText2=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш браузер. Ознайомтесь із запитами дозволів для цього додатка й оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
+webextPerms.sideloadTextNoPerms=Інша програма на вашому комп'ютері встановила додаток, що може вплинути на ваш браузер. Оберіть Увімкнути чи Скасувати (щоб залишити його вимкненим).
 
 webextPerms.sideloadEnable.label=Увімкнути
 webextPerms.sideloadEnable.accessKey=У
@@ -124,13 +124,13 @@ webextPerms.optionalPermsDeny.label=Заборонити
 webextPerms.optionalPermsDeny.accessKey=б
 
 webextPerms.description.bookmarks=Читання й зміна закладок
-webextPerms.description.browserSettings=Читання й зміна налаштувань $BrandShortName
+webextPerms.description.browserSettings=Читання й зміна налаштувань браузера
 webextPerms.description.browsingData=Стерти нещодавню історію перегляду, куки та пов'язані дані
 webextPerms.description.clipboardRead=Отримання даних з буфера обміну
 webextPerms.description.clipboardWrite=Збереження даних в буфер обміну
 webextPerms.description.devtools=Розширте інструменти розробника для доступу до своїх даних у відкритих вкладках
 webextPerms.description.dns=Доступ до IP адреси та інформації про ім'я розташування
-webextPerms.description.downloads=Завантаження файлів, а також читання й зміна історії $BrandShortName
+webextPerms.description.downloads=Завантаження файлів, а також читання й зміна історії браузера
 webextPerms.description.downloads.open=Відкрити файли, завантажені на ваш комп'ютер
 webextPerms.description.find=Читати текст всіх відкритих вкладок
 webextPerms.description.geolocation=Доступ до вашого розташування
@@ -142,13 +142,13 @@ webextPerms.description.nativeMessaging=Обмін повідомленнями 
 webextPerms.description.notifications=Показ сповіщень
 webextPerms.description.pkcs11=Надавати служби криптографічної авторизації
 webextPerms.description.privacy=Перегляд і редагування налаштувань приватності
-webextPerms.description.proxy=Керування налаштуваннями проксі $BrandShortName
+webextPerms.description.proxy=Керування налаштуваннями проксі браузера
 webextPerms.description.sessions=Доступ до нещодавно закритих вкладок
-webextPerms.description.tabs=Доступ до вкладок $BrandShortName
-webextPerms.description.tabHide=Приховування і показ вкладок $BrandShortName
+webextPerms.description.tabs=Доступ до вкладок браузера
+webextPerms.description.tabHide=Приховування і показ вкладок браузера
 webextPerms.description.topSites=Доступ до історії перегляду
 webextPerms.description.unlimitedStorage=Зберігання необмеженої кількості даних на стороні клієнта
-webextPerms.description.webNavigation=Доступ до активності $BrandShortName під час навігації
+webextPerms.description.webNavigation=Доступ до активності браузера під час навігації
 
 webextPerms.hostDescription.allUrls=Доступ до ваших даних для всіх вебсайтів
 
