--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -324,7 +324,7 @@ pluginInfo.unknownPlugin=Невідомий
 
 # Flash activation doorhanger UI
 flashActivate.message=Ви хочете дозволити виконання Adobe Flash на цьому сайті? Дозволяйте Adobe Flash лише на сайтах, яким ви довіряєте.
-flashActivate.outdated.message=Ви хочете дозволити виконання застарілої версії Adobe Flash на цьому сайті? Застаріла версія може вплинути на швидкодію та безпеку $BrandShortName.
+flashActivate.outdated.message=Ви хочете дозволити виконання застарілої версії Adobe Flash на цьому сайті? Застаріла версія може вплинути на швидкодію та безпеку браузера.
 flashActivate.remember=Запам’ятати це рішення
 flashActivate.noAllow=Не дозволяти
 flashActivate.allow=Дозволити
@@ -834,7 +834,7 @@ addKeywordTitleAutoFill=Шукати %S
 
 # safeModeRestart
 safeModeRestartPromptTitle=Перезапуск з вимкненими додатками
-safeModeRestartPromptMessage=Ви впевнені що хочете вимкнути всі додатки та перезапустити $BrandShortName?
+safeModeRestartPromptMessage=Ви впевнені що хочете вимкнути всі додатки та перезапустити браузер?
 safeModeRestartButton=Перезапуск
 
 # LOCALIZATION NOTE (browser.menu.showCharacterEncoding): Set to the string
@@ -853,7 +853,7 @@ dataReportingNotification.button.label  = Вибрати чим ділитись
 dataReportingNotification.button.accessKey  = В
 
 # Process hang reporter
-processHang.label = Вебсторінка сповільнює роботу $BrandShortName. Що ви бажаєте зробити?
+processHang.label = Вебсторінка сповільнює роботу браузера. Що ви бажаєте зробити?
 # LOCALIZATION NOTE (processHang.add-on.label): %1$S is the name of the
 # extension. %2$S is the name of the product (e.g., Firefox)
 processHang.add-on.label = Сценарій в розширенні “%1$S” спричиняє сповільнення %2$S.
