Pontoon: Update Frisian (fy-NL) localization of Firefox Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/fy-NL/browser/chrome/browser/browser.properties
+++ b/fy-NL/browser/chrome/browser/browser.properties
@@ -1222,6 +1222,7 @@ confirmationHint.pinTab.label = Fêstset!
 confirmationHint.pinTab.description = Klik mei rjochts op it ljepblêd om it los te meitsjen.
 
 confirmationHint.passwordSaved.label = Wachtwurd bewarre!
+confirmationHint.loginRemoved.label = Oanmelding fuortsmiten!
 confirmationHint.breakageReport.label = Rapport ferstjoerd. Tige tank!
 
 # LOCALIZATION NOTE (livebookmarkMigration.title):
