--- a/fy-NL/dom/chrome/accessibility/mac/accessible.properties
+++ b/fy-NL/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       haad
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      warskôging
 alertDialog =      warskôgingsdialoochfinster
+dialog      =      dialoochfinster
 article     =      artikel
 document    =      dokumint
 # The (spoken) role description for the WAI-ARIA figure role
