Corrections for bd12586

--- a/da/devtools/client/netmonitor.properties
+++ b/da/devtools/client/netmonitor.properties
@@ -1119,7 +1119,7 @@ netmonitor.summary.size=Størrelse på headers:
 # LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
 # on the button in the headers tab that toggle view for raw request/response headers
 # from the currently displayed request
-netmonitor.headers.raw=Raw
+netmonitor.headers.raw=Rå
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
