Pontoon: Update Frisian (fy-NL) localization of Firefox Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/fy-NL/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/fy-NL/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = Bywurkje
 updateLoginButtonAccessKey = B
 updateLoginButtonDeny.label = Net bywurkje
 updateLoginButtonDeny.accesskey = k
+updateLoginButtonDelete.label = Bewarre oanmelding fuortsmite
+updateLoginButtonDelete.accesskey = w
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
@@ -61,7 +63,6 @@ loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
 noUsername=Gjin brûkersnamme
-
 duplicateLoginTitle=Oanmelding bestiet al
 duplicateLogin=Der bestiet al ienselde oanmelding.
 
