--- a/oc/dom/chrome/security/security.properties
+++ b/oc/dom/chrome/security/security.properties
@@ -63,6 +63,7 @@ InsecurePasswordsPresentOnIframe=Camps senhal presents dins una iframe pas secur
 # LOCALIZATION NOTE: "%1$S" is the URI of the insecure mixed content resource
 LoadingMixedActiveContent2=Cargament de contengut mixte actiu (pas securizat) sus una pagina securizada « %1$S »
 LoadingMixedDisplayContent2=Cargament de contengut mixte non actiu (pas securizat) sus una pagina securizada « %1$S »
+LoadingMixedDisplayObjectSubrequestDeprecation=Lo cargament del contengut mixte (pas segur) « %1$S » dins un plugin sus una pagina securizada es desconselhat e serà lèu blocat.
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Un iframe que conten a l'encòp «allow-scripts» e «allow-same-origin» dins l'atribut «sandbox» pòt eliminar l'environament d'ont ven.
 
