Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/devtools/client/responsive.properties
+++ b/be/devtools/client/responsive.properties
@@ -30,11 +30,11 @@ responsive.responsiveMode=Адаптыўны
 
 # LOCALIZATION NOTE (responsive.enableTouch): Tooltip text for the touch
 # simulation button when it's disabled.
-responsive.enableTouch=Уключыць эмуляцыю сэнсарнага ўвода
+responsive.enableTouch=Уключыць эмуляцыю сэнсарнага ўводу
 
 # LOCALIZATION NOTE (responsive.disableTouch): Tooltip text for the touch
 # simulation button when it's enabled.
-responsive.disableTouch=Выключыць эмуляцыю сэнсарнага ўвода
+responsive.disableTouch=Выключыць эмуляцыю сэнсарнага ўводу
 
 # LOCALIZATION NOTE  (responsive.screenshot): Tooltip of the screenshot button.
 responsive.screenshot=Зрабіць скрыншот акна прагляду
