Pontoon: Update Belarusian (be) localization of Firefox Co-authored-by: Mikalai Udodau <crom-a@tut.by>

--- a/be/devtools/client/responsive.properties
+++ b/be/devtools/client/responsive.properties
@@ -16,7 +16,7 @@
 responsive.editDeviceList2=Рэдагаваць спіс…
 
 # LOCALIZATION NOTE (responsive.exit): Tooltip text of the exit button.
-responsive.exit=Закрыць рэжым адаптыўнага дызайна
+responsive.exit=Закрыць рэжым адаптыўнага дызайну
 
 # LOCALIZATION NOTE (responsive.rotate): Tooltip text of the rotate button.
 responsive.rotate=Павярнуць акно прагляду
@@ -143,11 +143,11 @@ responsive.devicePixelRatioOption=DPR: %1$S
 
 # LOCALIZATION NOTE (responsive.reloadConditions.touchSimulation): Label on checkbox used
 # to select whether to reload when touch simulation is toggled.
-responsive.reloadConditions.touchSimulation=Абнавіць пры пераключэнні сімуляцыі дотыку
+responsive.reloadConditions.touchSimulation=Абнаўляць пры пераключэнні сімуляцыі дотыку
 
 # LOCALIZATION NOTE (responsive.reloadConditions.userAgent): Label on checkbox used
 # to select whether to reload when user agent is changed.
-responsive.reloadConditions.userAgent=Абнавіць пры змене user agent
+responsive.reloadConditions.userAgent=Абнаўляць пры змене user agent
 
 # LOCALIZATION NOTE (responsive.reloadNotification.description2): Text in notification bar
 # shown on first open to clarify that some features need a reload to apply.
