Pontoon: Update Finnish (fi) localization of SeaMonkey Co-authored-by: Teemu <teemu.kaiturinmaki@gmail.com>

--- a/fi/suite/chrome/mailnews/messenger.properties
+++ b/fi/suite/chrome/mailnews/messenger.properties
@@ -372,6 +372,8 @@ newMailAlert_message=Tilille #1 vastaanotettiin #2 uusi viesti;Tilille #1 vastaa
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S / %S kt käytössä
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S %% täynnä
 
 # for message views
@@ -477,6 +479,9 @@ mailServerLoginFailedTitleWithAccount=Kirjautuminen tilille "%S" epäonnistui
 mailServerLoginFailed2=Kirjautuminen palvelimelle %1$S käyttäjänimellä %2$S epäonnistui.
 mailServerLoginFailedRetryButton=&Yritä uudelleen
 mailServerLoginFailedEnterNewPasswordButton=&Kirjoita uusi salasana
+
+confirmMarkAllFoldersReadTitle=Merkitse kaikki kansiot luetuiksi
+confirmMarkAllFoldersReadMessage=Haluatko varmasti merkitä tämän tilin kaikkien kansioiden kaikki viestit luetuiksi?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S on havainnut tämän viestin roskapostiksi.
