--- a/pa-IN/dom/chrome/accessibility/AccessFu.properties
+++ b/pa-IN/dom/chrome/accessibility/AccessFu.properties
@@ -130,6 +130,8 @@ main           =       ਮੁੱਖ
 navigation     =       ਨੇਵੀਗੇਸ਼ਨ
 search         =       ਖੋਜ
 
+region         =       ਖੇਤਰ
+
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
