--- a/pa-IN/dom/chrome/accessibility/mac/accessible.properties
+++ b/pa-IN/dom/chrome/accessibility/mac/accessible.properties
@@ -38,6 +38,7 @@ main    =       ਮੁੱਖ
 # The (spoken) role description for various WAI-ARIA roles
 alert       =      ਚੇਤਾਵਨੀ
 alertDialog =      ਚੇਤਾਵਨੀ ਡਾਈਲਾਗ
+dialog      =      ਡਾਈਲਾਗ
 article     =      ਲੇਖ
 document    =      ਦਸਤਾਵੇਜ਼
 # The (spoken) role description for the WAI-ARIA figure role
@@ -58,3 +59,7 @@ separator    =      ਵੱਖਰੇਵਾਂ
 tabPanel     =      ਟੈਬ ਪੈਨਲ
 # The roleDescription for the html:mark element
 highlight = ਉਘਾੜੋ
+# The roleDescription for the details element
+details = ਵੇਰਵੇ
+# The roleDescription for the summary element
+summary = ਸੰਖੇਪ
