Pontoon: Update Punjabi (pa-IN) localization of Firefox Co-authored-by: Aman Alam <amanpreet.alam@gmail.com>

--- a/pa-IN/browser/installer/nsisstrings.properties
+++ b/pa-IN/browser/installer/nsisstrings.properties
@@ -27,12 +27,18 @@ STUB_CLEANUP_PAVEOVER_BUTTON=ਅੱਪਡੇਟ ਕਰੋ(&U)
 STUB_CLEANUP_REINSTALL_BUTTON=ਮੁੜ-ਇੰਸਟਾਲ ਕਰੋ(&i)
 STUB_CLEANUP_CHECKBOX_LABEL=ਵਾਜਬ ਕਾਰਗੁਜ਼ਾਰੀ ਲਈ ਡਿਫਾਲਟ ਸੈਟਿੰਗਾਂ ਨੂੰ ਬਹਾਲ ਕਰੋ ਅਤੇ ਪੁਰਾਣੀਆਂ ਐਡ-ਆਨ ਨੂੰ ਹਟਾਓ(&R)
 
+STUB_CLEANUP_PAVEOVER_BUTTON2=ਅੱਪਡੇਟ ਕਰੋ
+STUB_CLEANUP_REINSTALL_BUTTON2=ਮੁੜ-ਇੰਸਟਾਲ ਕਰੋ
+STUB_CLEANUP_CHECKBOX_LABEL2=ਵਧੀਆ ਕਾਰਗੁਜ਼ਾਰੀ ਲਈ ਮੂਲ ਸੈਟਿੰਗਾਂ ਬਹਾਲ ਕਰੋ ਤੇ ਪੁਰਾਣੀਆਂ ਐਡ-ਆਨ ਹਟਾਓ
+
 STUB_INSTALLING_LABEL2=…ਹੁਣ ਇੰਸਟਾਲ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ
 # The \n in the next string is intended to force a nice-looking layout in en-US
 # and can be moved or deleted as needed. There's no practical limit on the
 # number of lines available.
 STUB_INSTALLING_HEADLINE=ਤੁਹਾਡੀ ਪਰਦੇਦਾਰੀ ਨੂੰ ਪਹਿਲਾਂ ਰੱਖਦਾ ਹੈ।\n$BrandProductName ਦਾ ਹਿੱਸਾ ਬਣੋ।
 STUB_INSTALLING_BODY=ਸਾਡੇ ਬਾਕੀ ਦੇ ਪਰਦੇਦਾਰੀ ਨੂੰ ਪਹਿਲ ਦਿੰਦੇ ਉਤਪਾਦ ਲਵੋ ਅਤੇ ਸਿੱਖੋ ਕਿ ਆਨਲਾਈਨ ਹੁਸ਼ਿਆਰ ਅਤੇ ਸੁਰੱਖਿਅਤ ਕਿਵੇਂ ਰਹੀਏ।
+STUB_INSTALLING_HEADLINE2=ਸਪੀਡ, ਪਰਦੇਦਾਰੀ ਅਤੇ ਸੁਰੱਖਿਆ ਲਈ ਆਪਣੀਆਂ ਸੈਟਿੰਗਾਂ ਨੂੰ ਢੁੱਕਵੀਆਂ ਬਣਾਓ।
+STUB_INSTALLING_BODY2=$BrandShortName ਕੁਝ ਕੁ ਮਿੰਟਾਂ ਵਿੱਚ ਤਿਆਰ ਹੋਵੇਗਾ।
 STUB_BLURB_FIRST1=ਹੁਣ ਤੱਕ ਦਾ ਸਭ ਤੋਂ ਤੇਜ਼, ਸਭ ਤੋਂ ਵੱਧ ਜਵਾਬਦੇਹ $BrandShortName
 STUB_BLURB_SECOND1=ਹੋਰ ਵੱਧ ਤੇਜ਼ ਸਫ਼ਾ ਲੋਡ ਕਰਨਾ ਅਤੇ ਟੈਬਾਂ ਬਦਲਣਾ
 STUB_BLURB_THIRD1=ਮਜ਼ਬੂਤ ਪ੍ਰਾਈਵੇਟ ਬਰਾਊਜ਼ਿੰਗ
