--- a/pa-IN/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/pa-IN/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -23,6 +23,8 @@ updateLoginButtonText = ਅੱਪਡੇਟ ਕਰੋ
 updateLoginButtonAccessKey = U
 updateLoginButtonDeny.label = ਅੱਪਡੇਟ ਨਾ ਕਰੋ
 updateLoginButtonDeny.accesskey = D
+updateLoginButtonDelete.label = ਸੰਭਾਲਿਆ ਲਾਗਇਨ ਹਟਾਓ
+updateLoginButtonDelete.accesskey = R
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
