--- a/pa-IN/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/pa-IN/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=%S ਬੰਦ ਕਰੋ
 restartMessageNoUnlocker=%S ਪਹਿਲਾਂ ਹੀ ਚੱਲ ਰਿਹਾ ਹੈ, ਪਰ ਜਵਾਬ ਨਹੀਂ ਦੇ ਰਿਹਾ ਹੈ। ਨਵੀਂ ਵਿੰਡੋ ਖੋਲਣ ਲਈ, ਤੁਹਾਨੂੰ ਪਹਿਲਾਂ ਮੌਜੂਦ %S ਐਪਲੀਕੇਸ਼ਨ ਨੂੰ ਬੰਦ ਕਰਨਾ ਪਵੇਗਾ ਜਾਂ ਆਪਣਾ ਸਿਸਟਮ ਮੁੜ ਚਾਲੂ ਕਰਨਾ ਪਵੇਗਾ।
+restartMessageNoUnlocker2=%S ਪਹਿਲਾਂ ਹੀ ਚੱਲ ਰਿਹਾ ਹੈ, ਪਰ ਇਹ ਜਵਾਬ ਨਹੀਂ ਦੇ ਰਿਹਾ ਹੈ। %S ਨੂੰ ਵਰਤਣ ਲਈ ਤੁਹਾਨੂੰ ਪਹਿਲਾਂ ਮੌਜੂਦਾ %S ਪ੍ਰੋਸੈਸਸ ਬੰਦ ਕਰਕੇ ਆਪਣੇ ਡਿਵਾਈਸ ਨੂੰ ਮੁੜ-ਸ਼ੁਰੂ ਕਰਨਾ ਹੋਵੇਗਾ ਜਾਂ ਵੱਖਰਾ ਪਰੋਫਾਈਲ ਵਰਤੋ।
 restartMessageUnlocker=%S ਪਹਿਲਾਂ ਹੀ ਚੱਲ ਰਿਹਾ ਹੈ, ਪਰ ਜਵਾਬ ਨਹੀਂ ਦੇ ਰਿਹਾ ਹੈ। ਨਵੀਂ ਵਿੰਡੋ ਖੋਲ੍ਹਣ ਲਈ, ਤੁਹਾਨੂੰ ਪਹਿਲਾਂ ਮੌਜੂਦ %S ਐਪਲੀਕੇਸ਼ਨ ਨੂੰ ਬੰਦ ਕਰਨਾ ਪਵੇਗਾ।
 restartMessageNoUnlockerMac=%S ਦੀ ਇੱਕ ਕਾਪੀ ਪਹਿਲਾਂ ਹੀ ਖੁੱਲੀ ਹੈ। ਇੱਕ ਸਮੇਂ %S ਦੀ ਇੱਕ ਹੀ ਕਾਪੀ ਚੱਲ ਸਕਦੀ ਹੈ।
 restartMessageUnlockerMac=%S ਦੀ ਇੱਕ ਕਾਪੀ ਪਹਿਲਾਂ ਹੀ ਖੁੱਲੀ ਹੈ। ਇਹ ਖੋਲ੍ਹਣ ਲਈ %S ਦੀ ਚੱਲ ਰਹੀ ਕਾਪੀ ਬੰਦ ਹੋ ਜਾਵੇਗੀ।
