Pontoon: Update Punjabi (pa-IN) localization of Firefox Co-authored-by: Aman Alam <amanpreet.alam@gmail.com> Co-authored-by: Satnam S Virdi <pika10singh@gmail.com>

--- a/pa-IN/devtools/client/inspector.properties
+++ b/pa-IN/devtools/client/inspector.properties
@@ -226,6 +226,7 @@ inspectorHTMLPasteBefore.accesskey=B
 # LOCALIZATION NOTE (inspectorHTMLPasteAfter.label): This is the label shown
 # in the inspector contextual-menu for the item that lets users paste
 # the HTML after the current node
+inspectorHTMLPasteAfter.label=ਬਾਅਦ
 inspectorHTMLPasteAfter.accesskey=A
 
 # LOCALIZATION NOTE (inspectorHTMLPasteFirstChild.label): This is the label
@@ -308,10 +309,12 @@ inspectorSearchHTML.label3=HTML ਖੋਜੋ
 # LOCALIZATION NOTE (inspectorExpandNode.label): This is the label
 # shown in the inspector contextual-menu for recursively expanding
 # mark-up elements
+inspectorExpandNode.label=ਸਭ ਫੈਲਾਓ
 
 # LOCALIZATION NOTE (inspectorCollapseAll.label): This is the label
 # shown in the inspector contextual-menu for recursively collapsing
 # mark-up elements
+inspectorCollapseAll.label=ਸਭ ਸਮੇਟੋ
 
 # LOCALIZATION NOTE (inspectorScreenshotNode.label): This is the label
 # shown in the inspector contextual-menu for the item that lets users take
@@ -334,6 +337,7 @@ inspectorAddNode.accesskey=C
 # - Copy Outer HTML
 # - Copy Unique selector
 # - Copy Image data URI
+inspectorCopyHTMLSubmenu.label=ਕਾਪੀ ਕਰੋ
 
 # LOCALIZATION NOTE (inspectorPasteHTMLSubmenu.label): This is the label
 # shown in the inspector contextual-menu for the sub-menu of the other
@@ -344,6 +348,7 @@ inspectorAddNode.accesskey=C
 # - After
 # - As First Child
 # - As Last Child
+inspectorPasteHTMLSubmenu.label=ਚੇਪੋ
 
 # LOCALIZATION NOTE (inspectorCustomElementDefinition.label): This is the label
 # shown in the inspector contextual-menu for custom elements to which a shadow root has
