--- a/pa-IN/devtools/client/changes.properties
+++ b/pa-IN/devtools/client/changes.properties
@@ -23,9 +23,11 @@ changes.iframeLabel=iframe
 
 # LOCALIZATION NOTE (changes.contextmenu.copy): Label for "Copy" option in Changes panel
 # context menu
+changes.contextmenu.copy=ਕਾਪੀ ਕਰੋ
 
 # LOCALIZATION NOTE (changes.contextmenu.copy.accessKey): Access key for "Copy"
 # option in the Changes panel.
+changes.contextmenu.copy.accessKey=C
 
 # LOCALIZATION NOTE (changes.contextmenu.copyAllChanges): Label for "Copy All Changes"
 # option in Changes panel context menu which copies all changed CSS declarations from a
@@ -46,6 +48,7 @@ changes.iframeLabel=iframe
 
 # LOCALIZATION NOTE (changes.contextmenu.selectAll): Label for "Select All" option in the
 # Changes panel context menu to select all text content.
+changes.contextmenu.selectAll=ਸਭ ਚੁਣੋ
 
 # LOCALIZATION NOTE (changes.contextmenu.selectAll.accessKey): Access key for "Select All"
 # option in the Changes panel.
