--- a/pa-IN/devtools/client/jsonview.properties
+++ b/pa-IN/devtools/client/jsonview.properties
@@ -15,6 +15,7 @@
 # LOCALIZATION NOTE (jsonViewer.tab.JSON, jsonViewer.tab.RawData,
 # jsonViewer.tab.Headers): Label for a panel tab.
 jsonViewer.tab.JSON=JSON
+jsonViewer.tab.RawData=ਕੱਚਾ ਡਾਟਾ
 
 # LOCALIZATION NOTE (jsonViewer.responseHeaders, jsonViewer.requestHeaders):
 # Label for header groups within the 'Headers' panel.
